--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.6",
     "siwe": "^2",
+    "stream-http": "3.2.0",
     "swiper": "8.4.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
@@ -79,10 +80,20 @@
     "@openzeppelin/contracts": "^4.9.3",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
+    "assert": "2.1.0",
+    "browserify-zlib": "0.2.0",
+    "buffer": "6.0.3",
     "chai": "^4.3.8",
+    "crypto-browserify": "3.12.1",
     "hardhat": "^2.17.2",
     "hardhat-gas-reporter": "^1.0.9",
+    "https-browserify": "1.0.0",
+    "ignore-loader": "0.1.2",
+    "os-browserify": "0.3.0",
+    "path-browserify": "1.0.1",
+    "process": "0.11.10",
     "solidity-coverage": "^0.8.4",
+    "stream-browserify": "3.0.0",
     "typechain": "^8.3.1"
   }
 }
