--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
   "dependencies": {
     "@headlessui/react": "1.7.17",
     "@radix-ui/react-tooltip": "1.1.4",
-    "@rainbow-me/rainbowkit": "^1.0.10",
-    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.3.0",
     "@reduxjs/toolkit": "1.9.6",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
@@ -66,9 +64,7 @@
     "stream-http": "3.2.0",
     "swiper": "8.4.4",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "viem": "^1.9.5",
-    "wagmi": "^1.3.11"
+    "typescript": "5.2.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
