--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
   },
   "dependencies": {
     "@headlessui/react": "1.7.17",
+    "@privy-io/react-auth": "3.8.0",
+    "@privy-io/wagmi": "2.0.3",
     "@radix-ui/react-tooltip": "1.1.4",
     "@reduxjs/toolkit": "1.9.6",
+    "@tanstack/react-query": "5.90.11",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -62,6 +65,7 @@
     "sharp": "^0.32.6",
     "siwe": "^2",
     "stream-http": "3.2.0",
+    "styled-components": "6.1.19",
     "swiper": "8.4.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
